cambio de subtitulos

--- a/vlsm.html
+++ b/vlsm.html
@@ -13,7 +13,7 @@
     <div class="calculator-card">
 
       <div class="calculator-header">
-        <div class="logo-icon-small">⚡</div>
+        <div class="logo-icon-small"> </div>
         <h1>Calculadora VLSM</h1>
         <p class="subtitle">Ingresa los datos y obtén el cálculo automático de subredes</p>
       </div>
