--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
             </div>
             
             <div class="calculator-header">
-                <div class="logo-icon-small">🌐</div>
+                <div class="logo-icon-small"></div>
                 <h1>Calculadora Subnet</h1>
                 <p class="subtitle">Completar los campos</p>
             </div>
@@ -161,7 +161,7 @@
             <div id="results" class="hidden">
                 <!-- Visual Summary Section -->
                 <div class="result-section">
-                    <h2 class="section-title">📊 RESUMEN VISUAL</h2>
+                    <h2 class="section-title">RESUMEN VISUAL</h2>
                     
                     <!-- Network Visualization -->
                     <div class="visual-card">
@@ -231,25 +231,25 @@
 
                 <!-- Basic Info Section -->
                 <div class="result-section">
-                    <h2 class="section-title">📋 INFORMACION BASICA</h2>
+                    <h2 class="section-title"> INFORMACION BASICA</h2>
                     <div class="result-grid">
                         <div class="result-card">
-                            <div class="result-icon">🎭</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">Subnet Mask</div>
                             <div class="result-value" id="maskDecimal">-</div>
                         </div>
                         <div class="result-card">
-                            <div class="result-icon">📍</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">CIDR Notation</div>
                             <div class="result-value" id="cidrNotation">-</div>
                         </div>
                         <div class="result-card">
-                            <div class="result-icon">🔀</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">Wildcard Mask</div>
                             <div class="result-value" id="wildcardMask">-</div>
                         </div>
                         <div class="result-card">
-                            <div class="result-icon">🏷️</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">Network Class</div>
                             <div class="result-value" id="networkClass">-</div>
                         </div>
@@ -258,25 +258,25 @@
 
                 <!-- Network Addresses Section -->
                 <div class="result-section">
-                    <h2 class="section-title">🌐 DIRECCIONES DE RED</h2>
+                    <h2 class="section-title">DIRECCIONES DE RED</h2>
                     <div class="result-grid">
                         <div class="result-card highlight">
-                            <div class="result-icon">🏠</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">Network Address</div>
                             <div class="result-value" id="networkAddr">-</div>
                         </div>
                         <div class="result-card highlight">
-                            <div class="result-icon">📡</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">Broadcast Address</div>
                             <div class="result-value" id="broadcastAddr">-</div>
                         </div>
                         <div class="result-card">
-                            <div class="result-icon">▶️</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">First Usable Host</div>
                             <div class="result-value" id="firstHost">-</div>
                         </div>
                         <div class="result-card">
-                            <div class="result-icon">⏸️</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">Last Usable Host</div>
                             <div class="result-value" id="lastHost">-</div>
                         </div>
@@ -285,25 +285,25 @@
 
                 <!-- Host Information Section -->
                 <div class="result-section">
-                    <h2 class="section-title">👥 INFORMACION DE HOST</h2>
+                    <h2 class="section-title"> INFORMACION DE HOST</h2>
                     <div class="result-grid">
                         <div class="result-card">
-                            <div class="result-icon">💯</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">Total Hosts</div>
                             <div class="result-value" id="totalHosts">-</div>
                         </div>
                         <div class="result-card">
-                            <div class="result-icon">✅</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">Usable Hosts</div>
                             <div class="result-value" id="usableHosts">-</div>
                         </div>
                         <div class="result-card">
-                            <div class="result-icon">🔢</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">N° Bits - SR</div>
                             <div class="result-value" id="bitsSR">-</div>
                         </div>
                         <div class="result-card">
-                            <div class="result-icon">🗂️</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">N° Subredes</div>
                             <div class="result-value" id="numSubredes">-</div>
                         </div>
@@ -312,25 +312,25 @@
 
                 <!-- Advanced Information Section -->
                 <div class="result-section">
-                    <h2 class="section-title">⚙️ INFORMACION AVANZADA</h2>
+                    <h2 class="section-title">INFORMACION AVANZADA</h2>
                     <div class="result-grid">
                         <div class="result-card">
-                            <div class="result-icon">🎯</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">N° Bits - Host</div>
                             <div class="result-value" id="bitsHost">-</div>
                         </div>
                         <div class="result-card">
-                            <div class="result-icon">📊</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">N° Host x SR</div>
                             <div class="result-value" id="hostXSR">-</div>
                         </div>
                         <div class="result-card">
-                            <div class="result-icon">🌍</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">Network Type</div>
                             <div class="result-value" id="networkType">-</div>
                         </div>
                         <div class="result-card">
-                            <div class="result-icon">🔐</div>
+                            <div class="result-icon"></div>
                             <div class="result-label">IP Type</div>
                             <div class="result-value" id="ipType">-</div>
                         </div>
@@ -339,7 +339,7 @@
 
                 <!-- Binary Representation Section -->
                 <div class="result-section">
-                    <h2 class="section-title">💻 REPRESENTACION BINARIA</h2>
+                    <h2 class="section-title">REPRESENTACION BINARIA </h2>
                     <div class="binary-container">
                         <div class="binary-row">
                             <span class="binary-label">IP Address:</span>
