--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div id="loginAlert" class="alert"></div>
                 <input class="form-content" type="text" id="loginUser" placeholder="Username" />
                 <input class="form-content" type="password" id="loginPass" placeholder="Password" />
-                <button class="login-button" id="buttonLogin">SIGN IN</button>
+                <button class="login-button" id="buttonLogin">INICIAR SESION</button>
                 <div class="toggle-text">
                     Don't have an account? 
                     <a class="toggle-link" id="openRegister">Crea una cuenta</a>
